# serializer version: 1
# name: TestJSONReportGeneration.test_json_report_snapshot
  dict({
    'checkov_data': dict({
      '$schema': 'https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json',
      'runs': list([
        dict({
          'results': list([
            dict({
              'level': 'error',
              'locations': list([
                dict({
                  'physicalLocation': dict({
                    'artifactLocation': dict({
                      'uri': 'main.tf',
                    }),
                    'region': dict({
                      'startLine': 10,
                    }),
                  }),
                }),
              ]),
              'message': dict({
                'text': 'Test finding',
              }),
              'ruleId': 'CKV_AWS_123',
            }),
          ]),
        }),
      ]),
      'version': '2.1.0',
    }),
    'git_repo_info': dict({
      'branch': 'main',
      'commit': 'abc123def456',
      'commit_message': 'Test commit',
      'remote_url': 'https://github.com/example/repo.git',
    }),
    'grype_data': dict({
      'matches': list([
        dict({
          'artifact': dict({
            'name': 'test-package',
            'type': 'python',
            'version': '1.0.0',
          }),
          'vulnerability': dict({
            'description': 'Test vulnerability',
            'id': 'CVE-2024-1234',
            'severity': 'HIGH',
          }),
        }),
        dict({
          'artifact': dict({
            'name': 'test-package2',
            'type': 'python',
            'version': '2.0.0',
          }),
          'vulnerability': dict({
            'description': 'Test critical vulnerability',
            'id': 'CVE-2024-5678',
            'severity': 'CRITICAL',
          }),
        }),
        dict({
          'artifact': dict({
            'name': 'test-package3',
            'type': 'python',
            'version': '3.0.0',
          }),
          'vulnerability': dict({
            'description': 'Test medium vulnerability',
            'id': 'CVE-2024-9999',
            'severity': 'MEDIUM',
          }),
        }),
      ]),
    }),
    'metadata': dict({
      'git_repo_info': dict({
        'branch': 'main',
        'commit': 'abc123def456',
        'commit_message': 'Test commit',
        'remote_url': 'https://github.com/example/repo.git',
      }),
      'scan_timestamp': '<TIMESTAMP>',
    }),
    'opengrep_data': dict({
      'results': list([
        dict({
          'check_id': 'test.rule.high',
          'end': dict({
            'col': 15,
            'line': 10,
          }),
          'extra': dict({
            'message': 'Test high severity finding',
            'severity': 'HIGH',
          }),
          'path': 'src/file.py',
          'start': dict({
            'col': 5,
            'line': 10,
          }),
        }),
        dict({
          'check_id': 'test.rule.medium',
          'end': dict({
            'col': 15,
            'line': 20,
          }),
          'extra': dict({
            'message': 'Test medium severity finding',
            'severity': 'MEDIUM',
          }),
          'path': 'src/file2.py',
          'start': dict({
            'col': 5,
            'line': 20,
          }),
        }),
        dict({
          'check_id': 'test.rule.low',
          'end': dict({
            'col': 15,
            'line': 30,
          }),
          'extra': dict({
            'message': 'Test low severity finding',
            'severity': 'LOW',
          }),
          'path': 'src/file3.py',
          'start': dict({
            'col': 5,
            'line': 30,
          }),
        }),
      ]),
    }),
    'syft_data': None,
    'trufflehog_data': list([
      dict({
        'DetectorDescription': 'AWS access key detected',
        'DetectorName': 'AWS',
        'DetectorType': 1,
        'Raw': 'AKIAIOSFODNN7EXAMPLE',
        'RawV2': 'AKIA***REDACTED***',
        'Redacted': 'AKIA***REDACTED***',
        'SourceMetadata': dict({
          'Data': dict({
            'Git': dict({
              'file': 'config/secrets.yaml',
              'line': 5,
              'repository_local_path': '.',
            }),
          }),
        }),
      }),
    ]),
  })
# ---
# name: TestNDJSONReportGeneration.test_ndjson_report_snapshot
  list([
    dict({
      'git_repo_info': dict({
        'branch': 'main',
        'commit': 'abc123def456',
        'commit_message': 'Test commit',
        'remote_url': 'https://github.com/example/repo.git',
      }),
      'scan_timestamp': '<TIMESTAMP>',
      'type': 'metadata',
    }),
    dict({
      'finding': dict({
        'DetectorDescription': 'AWS access key detected',
        'DetectorName': 'AWS',
        'DetectorType': 1,
        'Raw': 'AKIAIOSFODNN7EXAMPLE',
        'RawV2': 'AKIA***REDACTED***',
        'Redacted': 'AKIA***REDACTED***',
        'SourceMetadata': dict({
          'Data': dict({
            'Git': dict({
              'file': 'config/secrets.yaml',
              'line': 5,
              'repository_local_path': '.',
            }),
          }),
        }),
      }),
      'type': 'trufflehog',
    }),
    dict({
      'finding': dict({
        'check_id': 'test.rule.high',
        'end': dict({
          'col': 15,
          'line': 10,
        }),
        'extra': dict({
          'message': 'Test high severity finding',
          'severity': 'HIGH',
        }),
        'path': 'src/file.py',
        'start': dict({
          'col': 5,
          'line': 10,
        }),
      }),
      'type': 'opengrep',
    }),
    dict({
      'finding': dict({
        'check_id': 'test.rule.medium',
        'end': dict({
          'col': 15,
          'line': 20,
        }),
        'extra': dict({
          'message': 'Test medium severity finding',
          'severity': 'MEDIUM',
        }),
        'path': 'src/file2.py',
        'start': dict({
          'col': 5,
          'line': 20,
        }),
      }),
      'type': 'opengrep',
    }),
    dict({
      'finding': dict({
        'check_id': 'test.rule.low',
        'end': dict({
          'col': 15,
          'line': 30,
        }),
        'extra': dict({
          'message': 'Test low severity finding',
          'severity': 'LOW',
        }),
        'path': 'src/file3.py',
        'start': dict({
          'col': 5,
          'line': 30,
        }),
      }),
      'type': 'opengrep',
    }),
    dict({
      'finding': dict({
        'artifact': dict({
          'name': 'test-package',
          'type': 'python',
          'version': '1.0.0',
        }),
        'vulnerability': dict({
          'description': 'Test vulnerability',
          'id': 'CVE-2024-1234',
          'severity': 'HIGH',
        }),
      }),
      'type': 'grype',
    }),
    dict({
      'finding': dict({
        'artifact': dict({
          'name': 'test-package2',
          'type': 'python',
          'version': '2.0.0',
        }),
        'vulnerability': dict({
          'description': 'Test critical vulnerability',
          'id': 'CVE-2024-5678',
          'severity': 'CRITICAL',
        }),
      }),
      'type': 'grype',
    }),
    dict({
      'finding': dict({
        'artifact': dict({
          'name': 'test-package3',
          'type': 'python',
          'version': '3.0.0',
        }),
        'vulnerability': dict({
          'description': 'Test medium vulnerability',
          'id': 'CVE-2024-9999',
          'severity': 'MEDIUM',
        }),
      }),
      'type': 'grype',
    }),
    dict({
      'finding': dict({
        'level': 'error',
        'locations': list([
          dict({
            'physicalLocation': dict({
              'artifactLocation': dict({
                'uri': 'main.tf',
              }),
              'region': dict({
                'startLine': 10,
              }),
            }),
          }),
        ]),
        'message': dict({
          'text': 'Test finding',
        }),
        'ruleId': 'CKV_AWS_123',
      }),
      'type': 'checkov',
    }),
  ])
# ---
